flame-runtime/testsuite/tests/nmifc/should_compile/all.T
# Args to vtc are: extra compile flags

# def f( name, opts ):
#   opts.extra_hc_opts = '-fno-warn-incomplete-patterns'
#setTestOpts(f)
# 
# test('nm001', normal, compile, ['-fplugin Flame.Solver'])
# test('nm002', normal, compile, ['-fplugin Flame.Solver'])
# test('nm003', normal, compile, ['-fplugin Flame.Solver'])
# test('nm004', normal, compile, ['-fplugin Flame.Solver'])
# test('nm005', normal, compile, ['-fplugin Flame.Solver'])
# test('nm006', normal, compile, ['-fplugin Flame.Solver'])
# test('nm007', normal, compile, ['-fplugin Flame.Solver'])
# test('nm008', normal, compile, ['-fplugin Flame.Solver'])
# test('nm010', normal, compile, ['-fplugin Flame.Solver'])
# test('nm011', normal, compile, ['-fplugin Flame.Solver'])
# test('nm012', normal, compile, ['-fplugin Flame.Solver'])
# test('nm013', normal, compile, ['-fplugin Flame.Solver'])
# test('Auction', normal, compile, ['-fplugin Flame.Solver'])
