flame-runtime/testsuite/tests/nmifc/should_fail/all.T
# Args to vtc are: extra compile flags

# def f( name, opts ):
#   opts.extra_hc_opts = '-fno-warn-incomplete-patterns'
#setTestOpts(f)

#test('nmFail002', normal, compile_fail, ['-fplugin Flame.Solver'])
#test('nmFail005', normal, compile_fail, ['-fplugin Flame.Solver'])
#test('nmFail006', normal, compile_fail, ['-fplugin Flame.Solver'])
#test('nmFail007', normal, compile_fail, ['-fplugin Flame.Solver'])
